--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -42,7 +42,8 @@ jobs:
         run: |
           git fetch --all
           git checkout master
-          ./scripts/bump-version.sh '' $(date -d "$(echo $RELEASE_VERSION | sed -e 's/^\([0-9]\{2\}\)\.\([0-9]\{1,2\}\)\.[0-9]\+$/20\1-\2-1/') 1 month" +%y.%-m.0.dev0)
+          NEXT="$(echo ${RELEASE_VERSION} | awk -F. -v OFS=. '{$NF++;print}')-dev0"
+          ./scripts/bump-version.sh '' $NEXT
           git diff --quiet || git commit -anm 'meta: Bump new development version' && git pull --rebase && git push
 
       - uses: 8398a7/action-slack@v3
