--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -36,6 +36,7 @@ jobs:
           version: ${{ steps.vars.outputs.release_version }}
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CRAFT_LOG_LEVEL: debug
 
       - id: next-dev-version
         if: ${{ success() }}
