add a way to easily get the version from the snap

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -30,6 +30,12 @@ apps:
       PYTHONPATH: $SNAP/lib/python3.8/site-packages/:$SNAP/usr/lib/python3/dist-packages/
     command: license_manager/bin/epilog-controller
 
+  version:
+    environment:
+      PATH: $SNAP/bin/:$PATH
+      PYTHONPATH: $SNAP/lib/python3.8/site-packages/:$SNAP/usr/lib/python3/dist-packages/
+    command: bin/license-agent --version
+
 parts:
   license-manager:
     plugin: python
