--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,24 @@
 [tox]
-skipsdist = True
-envlist = unit, functional
-skip_missing_interpreters = True
+envlist = lint, unit
 
 [testenv]
 basepython = python3
+extras =
+    dev
 setenv =
-  PYTHONPATH = {toxinidir}/lib/:{toxinidir}
-passenv = HOME
 
 [testenv:lint]
-commands = flake8 {posargs} --ignore=D400,W605 license_manager/ 
-deps =
-    flake8
-    flake8-docstrings
-    flake8-import-order
-    pep8-naming
-    flake8-colors
+commands = flake8 {posargs} --ignore=D400,W605 license_manager/
+
+[testenv:unit]
+commands =
+    pytest {posargs}
+
+[pytest]
+addopts =
+    --cov=license_manager
+    --cov-report=term-missing
+    -v
 
 [flake8]
 exclude =
@@ -24,9 +26,11 @@ exclude =
     __pycache__,
     .tox,
     mod,
-max-line-length = 79
-max-complexity = 10
-import-order-style = edited
+max-line-length = 120
+max-complexity = 20
 
 [isort]
-force_to_top=setuppath
+lines_after_imports = 2
+# ignore from..import vs import while sorting a section
+force_sort_within_sections = 1
+profile = black
