--- a/.github/workflows/test_on_pr.yaml
+++ b/.github/workflows/test_on_pr.yaml
@@ -14,11 +14,11 @@ jobs:
           python-version: '3.x'
           architecture: 'x64'
       - name: "Install tox"
-        run: | 
+        run: |
           pip install tox
-      - name: "`make lint`"
-        run: | 
-          make lint
+      - name: "tox tests"
+        run: |
+          tox -e lint
 
       - uses: 8398a7/action-slack@v3
         with:
