--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint, unit
+envlist = lint, mypy, unit
 
 [testenv]
 basepython = python3
@@ -7,8 +7,11 @@ extras =
     dev
 setenv =
 
+[testenv:mypy]
+commands = mypy {posargs} src/licensemanager2/
+
 [testenv:lint]
-commands = flake8 {posargs} --ignore=D400,W605 license_manager/
+commands = flake8 {posargs} --ignore=D400,W605 src/licensemanager2/
 
 [testenv:unit]
 commands =
@@ -16,7 +19,7 @@ commands =
 
 [pytest]
 addopts =
-    --cov=license_manager
+    --cov=licensemanager2
     --cov-report=term-missing
     -v
 
