176647515 oops run tox environments correctly

--- a/.github/workflows/test_on_pr.yaml
+++ b/.github/workflows/test_on_pr.yaml
@@ -18,4 +18,4 @@ jobs:
           pip install tox
       - name: "tox tests"
         run: |
-          tox -e lint mypy
+          tox -e lint,mypy
