--- a/mypy.ini
+++ b/mypy.ini
@@ -2,5 +2,5 @@
 warn_unused_configs = True
 plugins = sqlmypy
 
-## [mypy-xxx.*]
-## ignore_missing_imports = True
+[mypy-asyncpg.*]
+ignore_missing_imports = True
