--- a/.github/workflows/test_on_pr.yaml
+++ b/.github/workflows/test_on_pr.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   lint:
-    name: "Lint codebase (make lint)"
+    name: "Tests"
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v2
@@ -18,4 +18,4 @@ jobs:
           pip install tox
       - name: "tox tests"
         run: |
-          tox -e lint,mypy
+          tox
