--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
-certifi==2020.12.5
-PyYAML==5.3.1
-sentry-sdk==0.19.5
-urllib3==1.26.2
+asyncpg==0.22.0
+aws-psycopg2==1.2.1
+boto3==1.17.8
+botocore==1.20.8
+databases==0.4.1
+fastapi==0.63.0
+jmespath==0.10.0
+mangum==0.10.0
+pydantic==1.7.3
+python-dateutil==2.8.1
+s3transfer==0.3.4
+six==1.15.0
+SQLAlchemy==1.3.23
+starlette==0.13.6
+typing-extensions==3.7.4.3
+urllib3==1.26.3
