176950724 agent uses token auth to talk to the apigw backend

--- a/tox.ini
+++ b/tox.ini
@@ -8,14 +8,16 @@ extras =
 setenv =
 
 [testenv:mypy]
-commands = mypy {posargs} src/licensemanager2/
+commands = mypy {posargs} src/licensemanager2/ src/authorizer.py
 
 [testenv:lint]
-commands = flake8 {posargs} --ignore=D400,W605 src/licensemanager2/
+commands = flake8 {posargs} --ignore=D400,W605 src/licensemanager2/ src/authorizer.py
 
 [testenv:unit]
 commands =
     pytest {posargs}
+setenv =
+    LM2_AGENT_BACKEND_API_TOKEN = xxxxxxxxx.xxxxxxxxxxxxx.xxxxxxxxxxx
 
 [pytest]
 addopts =
