176950724 implement real jwt signature and claim checks

--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,10 @@ extras =
 setenv =
 
 [testenv:mypy]
-commands = mypy {posargs} src/licensemanager2/ src/authorizer.py
+commands = mypy {posargs} src/licensemanager2/ authorizer/
 
 [testenv:lint]
-commands = flake8 {posargs} --ignore=D400,W605 src/licensemanager2/ src/authorizer.py
+commands = flake8 {posargs} --ignore=D400,W605 src/licensemanager2/ authorizer/
 
 [testenv:unit]
 commands =
