--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = lint, mypy, unit
 basepython = python3
 extras =
     dev
+    admin
 setenv =
 
 [testenv:mypy]
@@ -23,7 +24,7 @@ setenv =
 addopts =
     --cov=licensemanager2
     --cov-report=term-missing
-    --cov-fail-under=93
+    --cov-fail-under=94
     -v
 
 [flake8]
