176960724 rename the authorizer project and 100% tests

--- a/tox.ini
+++ b/tox.ini
@@ -9,23 +9,14 @@ extras =
 setenv =
 
 [testenv:mypy]
-commands = mypy {posargs} src/licensemanager2/ authorizer/
+commands = mypy {posargs} src/licensemanager2/ jawthorizer/
 
 [testenv:lint]
-commands = flake8 {posargs} --ignore=D400,W605 src/licensemanager2/ authorizer/
+commands = flake8 {posargs} --ignore=D400,W605 src/licensemanager2/ jawthorizer/
 
 [testenv:unit]
 commands =
     pytest {posargs}
-setenv =
-    LM2_AGENT_BACKEND_API_TOKEN = xxxxxxxxx.xxxxxxxxxxxxx.xxxxxxxxxxx
-
-[pytest]
-addopts =
-    --cov=licensemanager2
-    --cov-report=term-missing
-    --cov-fail-under=94
-    -v
 
 [flake8]
 exclude =
