176950434 fix up tests somewhat

--- a/tox.ini
+++ b/tox.ini
@@ -6,13 +6,14 @@ basepython = python3
 extras =
     dev
     admin
+    agent
 setenv =
 
 [testenv:mypy]
 commands = mypy {posargs} src/licensemanager2/ jawthorizer/
 
 [testenv:lint]
-commands = flake8 {posargs} --ignore=D400,W605 src/licensemanager2/ jawthorizer/
+commands = flake8 {posargs} --ignore=D400,W605,W503 src/licensemanager2/ jawthorizer/
 
 [testenv:unit]
 commands =
