--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,14 @@
 [tox]
 envlist = lint, mypy, unit
 
+# required for pyproject.toml
+isolated_build = True
+
 [testenv]
 basepython = python3
 extras =
     dev
-    admin
+    lm-create-jwt
     agent
 setenv =
 
