--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -5,52 +5,60 @@ on:
     inputs:
 
 jobs:
-  build-attach-and-publish:
+  build-publish:
     runs-on: ubuntu-latest
-    name: "Build the snap and upload the artifact"
+    name: "Upload the artifact"
     steps:
       - uses: actions/checkout@v2
 
-      - id: set-git-user
-        run: |
-          git config user.name omnivector-qa
-          git config user.email admin@omnivector.solutions
-
       - name: "Parse and store the release_version"
-        if: ${{ success() }}
         id: vars
         shell: bash
         run: |
           echo "::set-output name=release_version::$(echo $(git branch | grep '*' | awk '{print$2}') | sed 's/[a-z-]*\///g')"
-
-      - id: set-version
+      - id: set-env
         if: ${{ success() }}
         run: |
           echo 'RELEASE_VERSION=${{ steps.vars.outputs.release_version }}' >> $GITHUB_ENV;
-
+      - id: set-git-user
+        run: |
+          git config user.name omnivector-qa
+          git config user.email admin@omnivector.solutions
       - uses: getsentry/craft@master
         if: ${{ success() }}
         name: "Craft Publish"
         with:
           action: publish
-          version: ${{ steps.vars.outputs.release_version }}
+          version: ${{ env.RELEASE_VERSION }}
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CRAFT_LOG_LEVEL: debug
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Publish to pypicloud
+        uses: Gr1N/setup-poetry@v4
+        with:
+          poetry-version: 1.1.5
+      - run: |
+          source $HOME/.poetry/env
+
+          poetry build
+
+          poetry config repositories.pypicloud ${{ secrets.PYPI_URL }}
+
+          poetry publish \
+              --repository pypicloud \
+              --username ${{ secrets.PYPI_USERNAME }} \
+              --password ${{ secrets.PYPI_PASSWORD }}
 
       - id: next-dev-version
         if: ${{ success() }}
         run: |
           git fetch --all
-          git checkout master
-          NEXT="$(echo ${RELEASE_VERSION} | awk -F. -v OFS=. '{$NF++;print}')-dev0"
-          ./bin/bump-version.sh '' $NEXT
+          git checkout main
+          NEXT="$(echo ${{env.RELEASE_VERSION}} | awk -F. -v OFS=. '{$NF++;print}')-dev0"
+          ./.craft/scripts/bump-version.sh '' $NEXT
           git diff --quiet || git commit -anm 'meta: Bump new development version' && git pull --rebase && git push
-
-      - uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-        if: always() # Pick up events even if the job fails or is canceled.
