--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,20 @@
 [tox]
 envlist = lint, mypy, unit
 
+
 # required for pyproject.toml
 isolated_build = True
 
 [testenv]
-basepython = python3
+basepython = python3.8
 extras =
     dev
     lm-create-jwt
     agent
 setenv =
+
+deps =
+    pytest
 
 [testenv:mypy]
 commands = mypy {posargs} src/licensemanager2/ jawthorizer/
