--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands = flake8 {posargs} --ignore=D400,W605,W503 src/licensemanager2/ jawthor
 
 [testenv:unit]
 commands =
-    pytest {posargs}
+    pytest -vv {posargs}
 
 [flake8]
 exclude =
