--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ mangum = ""
 pyjwt = { version = "", optional = true }
 sqlalchemy = "1.3.23"
 # sqlalchemy = "~1.4"  # waiting for https://github.com/encode/databases/issues/298
+PyYAML = "5.4.1"
 
 # soft-required by databases:
 aiosqlite = { version = "", optional = true }
@@ -58,6 +59,7 @@ dev = [
     "pytest-cov",
     "pytest-env",
     "pytest-freezegun",
+    "PyYAML",
     "respx",
     "sqlalchemy-stubs",
     "tox",
