--- a/tox.ini
+++ b/tox.ini
@@ -11,20 +11,23 @@ extras =
     dev
     lm-create-jwt
     agent
-setenv =
+whitelist_externals = poetry
 
 deps =
     pytest
 
 [testenv:mypy]
-commands = mypy {posargs} src/licensemanager2/ jawthorizer/
+commands =
+    poetry run mypy {posargs} src/licensemanager2/ jawthorizer/
 
 [testenv:lint]
-commands = flake8 {posargs} --ignore=D400,W605,W503 src/licensemanager2/ jawthorizer/
+commands =
+    poetry run flake8 {posargs} --ignore=D400,W605,W503 src/licensemanager2/ jawthorizer/
 
 [testenv:unit]
 commands =
-    pytest -vv {posargs}
+    poetry install -v --no-root
+    poetry run pytest -vvv -s {posargs} --cov licensemanager2 --cov-report=term-missing --cov-report=html
 
 [flake8]
 exclude =
