--- a/.github/workflows/test_on_pr.yaml
+++ b/.github/workflows/test_on_pr.yaml
@@ -15,7 +15,7 @@ jobs:
           architecture: 'x64'
       - name: "Install tox"
         run: |
-          pip install tox
+          pip install tox poetry
       - name: "tox tests"
         run: |
           tox
