implement workload manager commands

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,3 +75,5 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 lm-create-jwt = "licensemanager2.backend.createjwt:main"
+slurmctld-prolog = "licensemanager2.workload_managers.slurm.slurmctld_prolog:main"
+slurmctld-epilog = "licensemanager2.workload_managers.slurm.slurmctld_epilog:main"
