--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ whitelist_externals = poetry
 
 [testenv:mypy]
 commands =
-    poetry run mypy {posargs} src/licensemanager2/ jawthorizer/
+    poetry run mypy {posargs} src/licensemanager2/ jawthorizer/ --exclude src/licensemanager2/workload_managers
 
 [testenv:lint]
 commands =
