--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,5 @@
 [run]
 omit =
     */flexlmsim.py
+    # Omit workload_managers module from coverage (come back to this and create tests for workload_managers)
+    */workload_managers/*
