--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "license-manager"
-version = "2.0.0+dev"
+version = "0.9.0-dev0"
 description = "`license-manager` is a license scheduling middleware that adds value in situations where multiple clusters share a license server or set of license servers."
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
@@ -24,6 +24,9 @@ mangum = ""
 pyjwt = { version = "", optional = true }
 sqlalchemy = "1.3.23"
 # sqlalchemy = "~1.4"  # waiting for https://github.com/encode/databases/issues/298
+pyyaml = { version = "5.4.1", optional = true }
+requests = { version = "2.25.1", optional = true }
+pydantic = {version = "1.8.1", extras = ["dotenv"] }
 
 # soft-required by databases:
 aiosqlite = { version = "", optional = true }
@@ -42,7 +45,7 @@ tox = { version = "", optional = true }
 uvicorn = { version = "", optional = true }
 
 [tool.poetry.extras]
-agent = ["httpx", "jinja2"]
+agent = ["httpx", "jinja2", "requests", "uvicorn", "pyyaml", "pydantic"]
 
 lm-create-jwt = ["boto3", "click", "pyjwt"]
 
@@ -58,10 +61,13 @@ dev = [
     "pytest-cov",
     "pytest-env",
     "pytest-freezegun",
+    "pyyaml",
     "respx",
     "sqlalchemy-stubs",
     "tox",
+    "requests",
     "uvicorn",
+    "pydantic",
     ]
 
 flexlmsim = ["jinja2", "tqdm"]
@@ -73,3 +79,5 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 lm-create-jwt = "licensemanager2.backend.createjwt:main"
+slurmctld-prolog = "licensemanager2.workload_managers.slurm.slurmctld_prolog:main"
+slurmctld-epilog = "licensemanager2.workload_managers.slurm.slurmctld_epilog:main"
