slurmctld prolog only track licenses that match the format
These changes introduce enhanced license tracking in the slurmctld
prolog that enforce only tracking licenses that meet the protocol:
<product>.<feature>@<license_server>:<num_tokens>

* test that no licenses returned when correct protocol not used
* test that correct license count is returned when correct
protocol is used
* move call to scontrol and output parsing to cmd_utils.py
* enhance slurmctldProlog to only track licenses that match the
protocol

--- a/tox.ini
+++ b/tox.ini
@@ -15,11 +15,11 @@ whitelist_externals = poetry
 
 [testenv:mypy]
 commands =
-    poetry run mypy {posargs} src/licensemanager2/ jawthorizer/ --exclude src/licensemanager2/workload_managers
+    poetry run mypy {posargs} src/licensemanager2/ jawthorizer/
 
 [testenv:lint]
 commands =
-    poetry run flake8 {posargs} --ignore=D400,W605,W503 src/licensemanager2/ jawthorizer/
+    poetry run flake8 {posargs} --ignore=W292,D400,W605,W503 src/licensemanager2/ jawthorizer/
 
 [testenv:unit]
 commands =
