--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
+alembic = { version = "1.6.3", optional = true }
 asyncpg = ""
 aws-psycopg2 = ""
 boto3 = { version = "", optional = true }
@@ -65,6 +66,7 @@ dev = [
     "tox",
     "uvicorn",
     "pydantic",
+    "alembic",
     ]
 
 flexlmsim = ["jinja2", "tqdm"]
