--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -21,7 +21,7 @@ jobs:
         run: |
           git config user.name omnivector-qa
           git config user.email admin@omnivector.solutions
-      - uses: getsentry/craft@master
+      - uses: getsentry/craft@0.13.2
         name: "Craft Prepare"
         with:
           action: prepare
