--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ sqlalchemy = "1.3.23"
 # sqlalchemy = "~1.4"  # waiting for https://github.com/encode/databases/issues/298
 pyyaml = { version = "5.4.1", optional = true }
 pydantic = {version = "1.8.2", extras = ["dotenv"] }
-
+sqlalchemy_utils = ""
 # soft-required by databases:
 aiosqlite = { version = "", optional = true }
 
