--- a/tox.ini
+++ b/tox.ini
@@ -12,9 +12,12 @@ extras =
     lm-create-jwt
     agent
 whitelist_externals = poetry
+passenv = 
+  PATH
 
 [testenv:mypy]
 commands =
+    poetry install -v --no-root --extras "test"
     poetry run mypy {posargs} src/licensemanager2/ jawthorizer/
 
 [testenv:lint]
@@ -23,7 +26,7 @@ commands =
 
 [testenv:unit]
 commands =
-    poetry install -v --no-root
+    poetry install -v --no-root --extras "test"
     poetry run pytest -vvv -s {posargs} --cov licensemanager2 --cov-report=term-missing --cov-report=html
 
 [flake8]
