--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ aiosqlite = { version = "", optional = true }
 
 flake8 = { version = "", optional = true }
 isort = { version = "", optional = true }
-mypy = { version = "", optional = true }
+mypy = { version = "0.902", optional = true }
+mypy-extensions = { version = "0.4.3", optional = true }
 pytest = { version = "", optional = true }
 pytest-asyncio = { version = "", optional = true }
 pytest-cov = { version = "", optional = true }
@@ -43,6 +44,12 @@ respx = { version = "0.16.3", optional = true }
 sqlalchemy-stubs = { version = "", optional = true }
 tox = { version = "", optional = true }
 uvicorn = { version = "", optional = true }
+types-pkg-resources = "0.1.2"
+types-PyYAML = "0.1.8"
+types-Jinja2 = { version = "2.11.1", optional = true }
+types-jwt = { version = "0.1.3", optional = true }
+types-click = { version = "7.1.1", optional = true }
+virtualenv = { version = "20.4.7", optional = true }
 
 [tool.poetry.extras]
 agent = ["httpx", "jinja2", "uvicorn", "pyyaml", "pydantic"]
@@ -67,6 +74,30 @@ dev = [
     "uvicorn",
     "pydantic",
     "alembic",
+    ]
+
+test = [
+    "aiosqlite",
+    "black",
+    "flake8",
+    "isort",
+    "mypy",
+    "pytest",
+    "pytest-asyncio",
+    "pytest-cov",
+    "pytest-env",
+    "pytest-freezegun",
+    "pyyaml",
+    "respx",
+    "sqlalchemy-stubs",
+    "pydantic",
+    "types-pkg-resources",
+    "types-PyYAML",
+    "mypy-extensions",
+    "types-Jinja2",
+    "types-jwt",
+    "types-click",
+    "virtualenv",
     ]
 
 flexlmsim = ["jinja2", "tqdm"]
