--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,19 +33,24 @@ aiosqlite = { version = "", optional = true }
 
 flake8 = { version = "", optional = true }
 isort = { version = "", optional = true }
-mypy = { version = "0.902", optional = true }
-mypy-extensions = { version = "0.4.3", optional = true }
 pytest = { version = "", optional = true }
 pytest-asyncio = { version = "", optional = true }
 pytest-cov = { version = "", optional = true }
 pytest-env = { version = "", optional = true }
 pytest-freezegun = { version = "", optional = true }
 respx = { version = "0.16.3", optional = true }
+
 sqlalchemy-stubs = { version = "", optional = true }
+
 tox = { version = "", optional = true }
 uvicorn = { version = "", optional = true }
-types-pkg-resources = "0.1.2"
-types-PyYAML = "0.1.8"
+
+# type stubs
+mypy = { version = "0.902", optional = true }
+mypy-extensions = { version = "0.4.3", optional = true }
+
+types-pkg-resources = { version = "0.1.2", optional = true }
+types-PyYAML = { version = "0.1.8", optional = true }
 types-Jinja2 = { version = "2.11.1", optional = true }
 types-jwt = { version = "0.1.3", optional = true }
 types-click = { version = "7.1.1", optional = true }
@@ -76,12 +81,11 @@ dev = [
     "alembic",
     ]
 
-test = [
+unit = [
     "aiosqlite",
     "black",
     "flake8",
     "isort",
-    "mypy",
     "pytest",
     "pytest-asyncio",
     "pytest-cov",
@@ -91,14 +95,20 @@ test = [
     "respx",
     "sqlalchemy-stubs",
     "pydantic",
+    "virtualenv",
+    ]
+
+mypy = [
+    "mypy",
     "types-pkg-resources",
     "types-PyYAML",
     "mypy-extensions",
     "types-Jinja2",
     "types-jwt",
     "types-click",
-    "virtualenv",
     ]
+
+
 
 flexlmsim = ["jinja2", "tqdm"]
 
