--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ passenv =
 
 [testenv:mypy]
 commands =
-    poetry install -v --no-root --extras "test"
+    poetry install -v --no-root --extras "mypy"
     poetry run mypy {posargs} src/licensemanager2/ jawthorizer/
 
 [testenv:lint]
@@ -26,7 +26,7 @@ commands =
 
 [testenv:unit]
 commands =
-    poetry install -v --no-root --extras "test"
+    poetry install -v --no-root --extras "unit"
     poetry run pytest -vvv -s {posargs} --cov licensemanager2 --cov-report=term-missing --cov-report=html
 
 [flake8]
