--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ mangum = ""
 pyjwt = { version = "", optional = true }
 sqlalchemy = "1.3.23"
 # sqlalchemy = "~1.4"  # waiting for https://github.com/encode/databases/issues/298
+sqlalchemy-utils = "0.37.4"
+
 pyyaml = { version = "5.4.1", optional = true }
 pydantic = {version = "1.8.2", extras = ["dotenv"] }
 
