--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pyjwt = { version = "", optional = true }
 sqlalchemy = "1.3.23"
 # sqlalchemy = "~1.4"  # waiting for https://github.com/encode/databases/issues/298
 sqlalchemy-utils = "0.37.4"
+typer = ""
 
 pyyaml = { version = "5.4.1", optional = true }
 pydantic = {version = "1.8.2", extras = ["dotenv"] }
@@ -62,6 +63,7 @@ virtualenv = { version = "20.4.7", optional = true }
 agent = ["httpx", "jinja2", "uvicorn", "pyyaml", "pydantic"]
 
 lm-create-jwt = ["boto3", "click", "pyjwt"]
+lmconfigure = ["typer"]
 
 dev = [
     "aiosqlite",
@@ -81,7 +83,8 @@ dev = [
     "uvicorn",
     "pydantic",
     "alembic",
-]
+    "typer",
+    ]
 
 unit = [
     "aiosqlite",
@@ -125,6 +128,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
+lmconfigure = "licensemanager2.backend.lmconfigure:app"
 lm-create-jwt = "licensemanager2.backend.createjwt:main"
 slurmctld-prolog = "licensemanager2.workload_managers.slurm.slurmctld_prolog:main"
 slurmctld-epilog = "licensemanager2.workload_managers.slurm.slurmctld_epilog:main"
