--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "license-manager"
+name = "licensemanager2"
 version = "0.9.2-dev0"
 description = "`license-manager` is a license scheduling middleware that adds value in situations where multiple clusters share a license server or set of license servers."
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
@@ -58,6 +58,7 @@ types-Jinja2 = { version = "2.11.1", optional = true }
 types-jwt = { version = "0.1.3", optional = true }
 types-click = { version = "7.1.1", optional = true }
 virtualenv = { version = "20.4.7", optional = true }
+requests = "^2.25.1"
 
 [tool.poetry.extras]
 agent = ["httpx", "jinja2", "uvicorn", "pyyaml", "pydantic"]
