--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "license-manager-agent"
-version = "0.1.0"
-description = "Provids an agent for interacting with license manager"
+version = "2.0.0-dev1"
+description = "Provides an agent for interacting with license manager"
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
 packages = [{ include = "lm_agent" }]
