--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{ include = "lm_agent" }]
 include = ["bin/lmstat"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.9"
 fastapi = "^0.68.0"
 fastapi-utils = "^0.2.1"
 httpx = "^0.18.2"
