--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 packages = [{ include = "lm_backend" }]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.9"
 fastapi = "^0.68.0"
 sentry-sdk = "^1.3.1"
 SQLAlchemy = "1.3.23"
