--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -20,5 +20,5 @@ ignore_missing_imports = True
 [mypy-typer.*]
 ignore_missing_imports = True
 
-[mypy-pkgresources.*]
+[mypy-pkg_resources.*]
 ignore_missing_imports = True
