--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -33,6 +33,7 @@ pytest-freezegun = "^0.4.2"
 mypy = "^0.910"
 sqlalchemy-stubs = "^0.4"
 types-click = "^7.1.5"
+flake8 = "^3.9.2"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -40,10 +41,10 @@ addopts = "--random-order --cov=lm_agent --cov-report=term-missing --cov-fail-un
 testpaths = ["tests"]
 
 [tool.black]
-line-length = 100
+line-length = 110
 
 [tool.isort]
-line_length = 100
+line_length = 110
 src_paths = ["lm_agent", "tests"]
 multi_line_output = 3
 include_trailing_comma = true
