--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -19,3 +19,6 @@ ignore_missing_imports = True
 
 [mypy-typer.*]
 ignore_missing_imports = True
+
+[mypy-pkg_resources.*]
+ignore_missing_imports = True
