--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 packages = [{ include = "lm_backend" }]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.9"
 fastapi = "^0.68.0"
 sentry-sdk = "^1.3.1"
 SQLAlchemy = "1.3.23"
@@ -17,7 +17,6 @@ SQLAlchemy-Utils = "^0.37.8"
 mangum = "^0.12.1"
 loguru = "^0.5.3"
 asyncpg = "^0.24.0"
-psycopg2 = "^2.9.1"
 aws-psycopg2 = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
