Booking endpoint fix (#49)
* Fix version number

* Add lead_host and user_name to booking schema

* Update endpoint to be able to receive user_name and lead_host

* Send lead_host and user_name in booking request to backend

* Fix Makefile for packaging

* Update poetry

Co-authored-by: jamesbeedy <jamesbeedy@users.noreply.github.com>

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -29,11 +29,9 @@ local:
 lambda:
 	rm -f ${LAMBDA_TARGET}
 	python3 -m venv _tmp_venv
-	poetry config virtualenvs.create false --local
-	source _tmp_venv/bin/activate && poetry install --no-dev
+	source _tmp_venv/bin/activate && pip install -U pip wheel .
 	cd _tmp_venv/lib/python*.*/site-packages && zip -qr9 ${LAMBDA_TARGET} .
 	rm -rf _tmp_venv
-	rm poetry.toml
 
 clean: clean-eggs clean-build
 	@find . -iname '*.pyc' -delete
