--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "license-manager-backend"
-version = "0.10.0"
+version = "2.0.0"
 description = "Provides an API for managing license data"
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
@@ -12,10 +12,12 @@ fastapi = "^0.68.0"
 sentry-sdk = "^1.3.1"
 SQLAlchemy = "1.3.23"
 jwt = {version = "^1.2.0", optional = true}
-databases = "^0.4.3"
+databases = {extras = ["postgresql"], version = "^0.4.3"}
 SQLAlchemy-Utils = "^0.37.8"
 mangum = "^0.12.1"
 loguru = "^0.5.3"
+asyncpg = "^0.24.0"
+aws-psycopg2 = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
