--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -18,6 +18,7 @@ pydantic = {version = "^1.8.2", extras = ["dotenv"]}
 requests = "^2.26.0"
 tabulate = "^0.8.9"
 boto3 = "^1.18.17"
+sentry-sdk = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
