--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "license-manager-agent"
-version = "2.0.0-dev2"
+version = "2.0.0-dev4"
 description = "Provides an agent for interacting with license manager"
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
@@ -18,6 +18,7 @@ pydantic = {version = "^1.8.2", extras = ["dotenv"]}
 requests = "^2.26.0"
 tabulate = "^0.8.9"
 boto3 = "^1.18.17"
+sentry-sdk = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
