--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -19,6 +19,7 @@ requests = "^2.26.0"
 tabulate = "^0.8.9"
 boto3 = "^1.18.17"
 sentry-sdk = "^1.3.1"
+uvicorn = "^0.15.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
