Add uvicorn to backend

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ mangum = "^0.12.1"
 loguru = "^0.5.3"
 asyncpg = "^0.24.0"
 aws-psycopg2 = "^1.2.1"
+uvicorn = "^0.15.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
