--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "license-manager-backend"
-version = "2.0.0"
+version = "2.0.1"
 description = "Provides an API for managing license data"
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
@@ -19,6 +19,7 @@ loguru = "^0.5.3"
 asyncpg = "^0.24.0"
 aws-psycopg2 = "^1.2.1"
 uvicorn = "^0.15.0"
+python-dotenv = "^0.19.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
