Remove fastapi from tests
Signed-off-by: zsinx6 <zsinx6@users.noreply.github.com>

--- a/agent/mypy.ini
+++ b/agent/mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
 warn_unused_configs = True
-plugins = sqlmypy, pydantic.mypy
+plugins = pydantic.mypy
 
 [mypy-asyncpg.*]
 ignore_missing_imports = True
