--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "license-manager-agent"
-version = "2.0.2"
+version = "2.0.3-dev11"
 description = "Provides an agent for interacting with license manager"
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
@@ -9,8 +9,6 @@ include = ["bin/lmstat"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.9"
-fastapi = "^0.68.0"
-fastapi-utils = "^0.2.1"
 httpx = "^0.18.2"
 PyJWT = "^2.1.0"
 typer = "^0.3.2"
@@ -19,7 +17,6 @@ requests = "^2.26.0"
 tabulate = "^0.8.9"
 boto3 = "^1.18.17"
 sentry-sdk = "^1.3.1"
-uvicorn = "^0.15.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
@@ -33,7 +30,6 @@ pytest-random-order = "^1.0.4"
 pytest-sugar = "^0.9.4"
 pytest-freezegun = "^0.4.2"
 mypy = "^0.910"
-sqlalchemy-stubs = "^0.4"
 types-click = "^7.1.5"
 flake8 = "^3.9.2"
 
@@ -54,6 +50,7 @@ include_trailing_comma = true
 [tool.poetry.scripts]
 lm-configure = "bin.lmconfigure:app"
 lm-create-jwt = "bin.createjwt:main"
+reconcile = "lm_agent.reconcile:main"
 slurmctld-prolog = "lm_agent.workload_managers.slurm.slurmctld_prolog:main"
 slurmctld-epilog = "lm_agent.workload_managers.slurm.slurmctld_epilog:main"
 
