--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -4,10 +4,8 @@ services:
     image: postgres
     environment:
       POSTGRES_PASSWORD: 123
-    ports:
-      - "6432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-U", "postgres", "-p", "6432", "-h", "localhost"]
+      test: ["CMD-SHELL", "pg_isready", "-U", "postgres", "-h", "localhost"]
       interval: 5s
       timeout: 5s
       retries: 5
