--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -32,6 +32,7 @@ pytest-freezegun = "^0.4.2"
 mypy = "^0.910"
 types-click = "^7.1.5"
 flake8 = "^3.9.2"
+ipython = "^7.30.0"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
