LM-144 Added machine-to-machine auth for license-manager-agent
This will allow the agent to communicate with the backend that is using
Armasec for security. The agent will secure a token from Auth0 on the
first request that it makes. This removes the need to keep a permanent
token deployed along side the agent.

Other Stuff:
* Fixed some broken commands in lmconfigure
* Created clients (async and sync) for communicating with the backend
* Updated urls for requests to backend
* Added Auth0 to config
* Enriched exceptions for agent
* Removed irrelevant token code
* Updated tests
* Updated docker-compose for automatic reloading on code change
* Fixed a bug with the add_configuration endpoint in the backend
* Moved mypy config to pyproject.toml
* Fixed some typing issues

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,5 +1,6 @@
 version: "3.9"
 services:
+
   postgres-back:
     image: postgres
     environment:
@@ -10,14 +11,22 @@ services:
       timeout: 5s
       retries: 5
     user: postgres
+
   license-manager:
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ./Dockerfile-dev
     depends_on:
       postgres-back:
         condition: service_healthy
+    volumes:
+      - ./lm_backend:/app/lm_backend
     environment:
-      LM2_DATABASE_URL: postgres://postgres:123@postgres-back:5432/postgres
+      LM2_DATABASE_URL: ${LM2_DATABASE_URL:-postgres://postgres:123@postgres-back:5432/postgres}
+      LM2_ARMASEC_DOMAIN: ${LM2_ARMASEC_DOMAIN}
+      LM2_ARMASEC_AUDIENCE: ${LM2_ARMASEC_AUDIENCE}
+      LM2_ARMASEC_DEBUG: ${LM2_ARMASEC_DEBUG}
+      LM2_LOG_LEVEL: ${LM2_LOG_LEVEL}
     ports:
-      - "7000:80"
+      - "7000:8000"
+    command: uvicorn lm_backend.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
