--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -17,6 +17,7 @@ requests = "^2.26.0"
 tabulate = "^0.8.9"
 boto3 = "^1.18.17"
 sentry-sdk = "^1.3.1"
+py-buzz = "^2.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
@@ -46,6 +47,14 @@ line_length = 110
 src_paths = ["lm_agent", "tests"]
 multi_line_output = 3
 include_trailing_comma = true
+
+[tool.mypy]
+warn_unused_configs = true
+plugins = "pydantic.mypy"
+
+[[tool.mypy.overrides]]
+module = [ "buzz", "pkg_resources" ]
+ignore_missing_imports = true
 
 [tool.poetry.scripts]
 lm-configure = "bin.lmconfigure:app"
