--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -38,6 +38,12 @@ flake8 = "^3.9.2"
 minversion = "6.0"
 addopts = "--random-order --cov=lm_agent --cov-report=term-missing --cov-fail-under=70"
 testpaths = ["tests"]
+env = [
+    "AUTH0_DOMAIN = str",
+    "AUTH0_AUDIENCE = str",
+    "AUTH0_CLIENT_ID = str",
+    "AUTH0_CLIENT_SECRET = str",
+]
 
 [tool.black]
 line-length = 110
@@ -48,17 +54,15 @@ src_paths = ["lm_agent", "tests"]
 multi_line_output = 3
 include_trailing_comma = true
 
-[tool.mypy]
-warn_unused_configs = true
-plugins = "pydantic.mypy"
-
 [[tool.mypy.overrides]]
-module = [ "buzz", "pkg_resources" ]
+module = [
+    "buzz",
+    "pkg_resources",
+]
 ignore_missing_imports = true
 
 [tool.poetry.scripts]
 lm-configure = "bin.lmconfigure:app"
-lm-create-jwt = "bin.createjwt:main"
 reconcile = "lm_agent.reconcile:main"
 slurmctld-prolog = "lm_agent.workload_managers.slurm.slurmctld_prolog:main"
 slurmctld-epilog = "lm_agent.workload_managers.slurm.slurmctld_epilog:main"
