--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,41 +1,63 @@
+# SETTINGS
+# Use one shell for all commands in a target recipe
 SHELL:=/bin/bash
+.DEFAULT_GOAL:=help
 ROOT_DIR:=$(shell dirname $(shell pwd))
+PACKAGE_NAME:=lm_backend
 
+.PHONY: install
 install:
 	poetry install
 
+.PHONY: test
 test: install
 	poetry run pytest
 
+.PHONY: mypy
 mypy: install
-	poetry run mypy lm_backend --pretty
+	poetry run mypy ${PACKAGE_NAME} --pretty
 
+.PHONY: lint
 lint: install
-	poetry run flake8 lm_backend --max-line-length=110
-	poetry run black --check lm_backend tests
-	poetry run isort --check lm_backend tests
+	poetry run flake8 ${PACKAGE_NAME} --max-line-length=110
+	poetry run black --check ${PACKAGE_NAME} tests
+	poetry run isort --check ${PACKAGE_NAME} tests
 
+.PHONY: qa
 qa: test mypy lint
-	echo "All tests pass! Ready for deployment"
+	echo "All quality checks pass!"
 
+.PHONY: format
 format: install
-	poetry run black lm_backend tests
-	poetry run isort lm_backend tests
+	poetry run black ${PACKAGE_NAME} tests
+	poetry run isort ${PACKAGE_NAME} tests
 
+.PHONY: release-%
+release-%:
+	../release-scripts/prepare-release.sh $(subst release-,,$@)
+
+.PHONY: publish
+publish:
+	../release-scripts/publish-release.sh
+
+.PHONY: local
 local:
 	poetry run uvicorn --host 0.0.0.0 lm_backend.main:app --reload
 
 # To include a message with the generated migration, set the MESSAGE variable in the make command:
 #   $ make db-migration MESSAGE="this migration applies foo to bar"
+.PHONY: db-migrate
 db-migrate: install
 	poetry run alembic --config=alembic/alembic.ini revision --autogenerate --message "$(MESSAGE)"
 
 # To override the upgrade target from head, set the UPGRADE_TARGET variable in the make command:
 #   $ make db-upgrade UPGRADE_TARGET=bf1e9e
 UPGRADE_TARGET ?= head
+.PHONY: db-upgrade
 db-upgrade: install
 	poetry run alembic --config=alembic/alembic.ini upgrade $(UPGRADE_TARGET)
 
+.PHONY: clean
 clean:
 	@find . -iname '*.pyc' -delete
 	@find . -iname '*.pyo' -delete
@@ -48,3 +70,7 @@ clean:
 	@rm -fr build/
 	@rm -fr dist/
 	@rm -fr *.egg-info
+
+.PHONY: help
+help: # Display target comments in 'make help'
+	grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}'
