Rename test env vars to OICD instead of Auth0

--- a/lm-cli/pyproject.toml
+++ b/lm-cli/pyproject.toml
@@ -49,10 +49,10 @@ addopts = [
 env = [
     "LM_API_ENDPOINT = https://armada-k8s.staging.omnivector.solutions/lm/api/v1",
     "LM_DEBUG = false",
-    "AUTH0_DOMAIN = dummy_auth_domain.com",
-    "AUTH0_AUDIENCE = https://dummy_auth_audience.com",
-    "AUTH0_CLIENT_ID = dummy_client_id",
-    "AUTH0_CLIENT_SECRET = dummy_client_secret",
+    "OICD_DOMAIN = dummy_auth_domain.com",
+    "OICD_AUDIENCE = https://dummy_auth_audience.com",
+    "OICD_CLIENT_ID = dummy_client_id",
+    "OICD_CLIENT_SECRET = dummy_client_secret",
     "IDENTITY_CLAIMS_KEY = https://test-domain.test",
 ]
 
