Fixed issue with old version of black

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,7 +35,7 @@ pytest-sugar = "^0.9.4"
 aiosqlite = "^0.17.0"
 ipython = "^7.26.0"
 asgi-lifespan = "^1.0.1"
-black = "^21.7b0"
+black = "^22.3"
 alembic = "^1.6.5"
 mypy = "^0.910"
 sqlalchemy-stubs = "^0.4"
