--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,11 @@
-FROM tiangolo/uvicorn-gunicorn-fastapi:python3.8-slim
+FROM python:3.8-slim-buster
 
-ENV MODULE_NAME=lm_backend.main
+WORKDIR /app
 
-RUN apt update && apt install -y curl
+RUN apt update && apt install -y curl libpq-dev gcc
 
-RUN curl -sSL https://install.python-poetry.org | POETRY_HOME=/opt/poetry POETRY_VERSION=1.1.13 python && \
+RUN curl -sSL https://install.python-poetry.org | \
+    POETRY_HOME=/opt/poetry POETRY_VERSION=1.1.13 python && \
     cd /usr/local/bin && \
     ln -s /opt/poetry/bin/poetry && \
     poetry config virtualenvs.create false
@@ -13,4 +14,7 @@ COPY ./pyproject.toml ./poetry.lock* /app/
 
 RUN poetry install --no-root --no-dev
 
+COPY ./alembic /app/alembic
 COPY ./lm_backend /app/lm_backend
+
+CMD ["uvicorn", "lm_backend.main:app", "--host", "0.0.0.0", "--port", "80", "--loop", "asyncio"]
