Update Makefile to use docker-compose for tests

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -10,8 +10,9 @@ install:
 	poetry install
 
 .PHONY: test
-test: install
-	poetry run pytest
+test: 
+	docker-compose build unittest
+	docker-compose run --rm unittest
 
 .PHONY: mypy
 mypy: install
